--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -221,6 +221,20 @@
   </div>
 </footer>
 
-
+<!-- Default Statcounter code for realfred
+https://twoongg.github.io/projects/realfred/ -->
+<script type="text/javascript">
+var sc_project=13014131; 
+var sc_invisible=1; 
+var sc_security="6db63f9f"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/13014131/0/6db63f9f/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
