remove affilation for now

--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -90,28 +90,28 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://twoongg.github.io">Taewoong Kim</a><sup>1,2</sup>*,
+              <a href="https://twoongg.github.io">Taewoong Kim</a>,
             </span>
             <span class="author-block">
-              <a>Cheolhong Min</a><sup>1,2</sup>*,
+              <a>Cheolhong Min</a>,
             </span>
             <span class="author-block">
-              <a href="https://bhkim94.github.io">Byeonghwi Kim</a><sup>1,2</sup>,
+              <a href="https://bhkim94.github.io">Byeonghwi Kim</a>,
             </span>
             <span class="author-block">
-              <a>Jinyeon Kim</a><sup>1,2</sup>,
+              <a>Jinyeon Kim</a>,
             </span>
             <span class="author-block">
-              <a>Wonje Jeong</a><sup>1,2</sup>,
+              <a>Wonje Jeong</a>,
             </span>
             <span class="author-block">
-              <a href="https://ppolon.github.io">Jonghyun Choi</a><sup>2,&dagger;</sup>
+              <a href="https://ppolon.github.io">Jonghyun Choi</a><sup>&dagger;</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <sup>1</sup><span class="author-block">Yonsei University</span>
-            <sup>2</sup><span class="author-block">Seoul National University</span>
+            <!-- <sup>1</sup><span class="author-block">Yonsei University</span>
+            <sup>2</sup><span class="author-block">Seoul National University</span> -->
             <br>
             <p style="font-size:17px"><sup>&dagger;</sup>Corresponding author. Most of the work is done while JC is with Yonsei University.</p>
           </div>
