remove affilation for now

--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -90,10 +90,10 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://twoongg.github.io">Taewoong Kim</a>,
+              <a href="https://twoongg.github.io">Taewoong Kim*</a>,
             </span>
             <span class="author-block">
-              <a>Cheolhong Min</a>,
+              <a>Cheolhong Min*</a>,
             </span>
             <span class="author-block">
               <a href="https://bhkim94.github.io">Byeonghwi Kim</a>,
