--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -148,7 +148,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/twoonogg/realfred" 
+                <a href="https://huggingface.co/datasets/SNUMPR/realfred" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -194,6 +194,25 @@
     </div>
   </div>
 </section>
+
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <!-- Content. -->
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-full-width">
+          <h2 class="title is-3">Content</h2>
+          <div class="content has-text-justified">
+            <p>
+              Will be availbale soon!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 <section class="section" id="BibTeX">
