--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -82,7 +82,7 @@
       <div class="columns is-centered is-full-width">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title" style="font-size:45px">
-            ReALFRED: Interactive Instruction Following  <br>
+            ReALFRED: Embodied Instruction Following  <br>
             Benchmark in Photo-Realistic Environments
           </h1>
           <h1 class="title is-4 publication-title">
@@ -93,16 +93,16 @@
               <a href="https://twoongg.github.io">Taewoong Kim*</a>,
             </span>
             <span class="author-block">
-              <a>Cheolhong Min*</a>,
+              <a href="https://mch0916.github.io">Cheolhong Min*</a>,
             </span>
             <span class="author-block">
               <a href="https://bhkim94.github.io">Byeonghwi Kim</a>,
             </span>
             <span class="author-block">
-              <a>Jinyeon Kim</a>,
+              <a href="https://wild-reptile-5c4.notion.site/Jinyeon-Kim-s-Portfolio-page-ef855010f6c445488ad6969ed7cda11f?pvs=4">Jinyeon Kim</a>,
             </span>
             <span class="author-block">
-              <a>Wonje Jeong</a>,
+              <a href="https://cryinginitial.github.io/">Wonje Jeung</a>,
             </span>
             <span class="author-block">
               <a href="https://ppolon.github.io">Jonghyun Choi</a><sup>&dagger;</sup>
@@ -113,7 +113,7 @@
             <!-- <sup>1</sup><span class="author-block">Yonsei University</span>
             <sup>2</sup><span class="author-block">Seoul National University</span> -->
             <br>
-            <p style="font-size:17px"><sup>&dagger;</sup>Corresponding author. Most of the work is done while JC is with Yonsei University.</p>
+            <p style="font-size:17px"><sup>&dagger;</sup>Corresponding author.</p>
           </div>
 
           <div class="column has-text-centered">
@@ -148,12 +148,21 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/SNUMPR/realfred" 
+                <a href="https://huggingface.co/datasets/SNUMPR/realfred_json" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span>Data 1</span>
+                  </a>
+              <!-- Dataset Link. -->
+              <span class="link-block">
+                <a href="https://huggingface.co/datasets/SNUMPR/realfred_feat" 
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-images"></i>
+                  </span>
+                  <span>Data 2</span>
                   </a>
               </span>
             </div>
@@ -219,7 +228,7 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{kim2024realfred,
-  author    = {Kim, Taewoong and Min, Cheolhong and Kim, Byeonghwi and Kim, Jinyeon and Jeong, Wonje and Choi, Jonghyun},
+  author    = {Kim, Taewoong and Min, Cheolhong and Kim, Byeonghwi and Kim, Jinyeon and Jeung, Wonje and Choi, Jonghyun},
   title     = {ReALFRED: Interactive Instruction Following Benchmark in Photo-Realistic Environment},
   booktitle = {ECCV},
   year      = {2024},
