--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -122,21 +122,21 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://TBD"
+                <a href="https://arxiv.org/pdf/2407.18550"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (coming soon)</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://TBD"
+                <a href="https://arxiv.org/abs/2407.18550"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv  (coming soon)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <span class="link-block">
