--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -101,7 +101,7 @@
               <a href="https://bhkim94.github.io">Byeonghwi Kim</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://wild-reptile-5c4.notion.site/Jinyeon-Kim-s-Portfolio-page-ef855010f6c445488ad6969ed7cda11f?pvs=4">Jinyeon Kim</a><sup>1,2</sup>,
+              <a href="http://jinyeonkim.notion.site">Jinyeon Kim</a><sup>1,2</sup>,
             </span>
             <span class="author-block">
               <a href="https://cryinginitial.github.io/">Wonje Jeung</a><sup>1</sup>,
