add realfred video

--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -202,6 +202,15 @@
           </div>
         </div>
       </div>
+      
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-full-width">
+          <h2 class="title is-3">Video</h2>
+          <div class="publication-video">
+            <iframe src="https://www.youtube.com/embed/fDlPbwEDw8w?si=ioj17yxP9JYfakMP"
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+
     </div>
   </div>
 </section>
