--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -122,7 +122,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2407.18550"
+                <a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/01610.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
