add other research

--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -69,7 +69,24 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          
+          <a class="navbar-item" href="https://twoongg.github.io/projects/realfred/">
+            ReALFRED
+          </a>
+          <a class="navbar-item" href="https://bhkim94.github.io/projects/CL-ALFRED">
+            CL-ALFRED
+          </a>
+          <a class="navbar-item" href="https://bhkim94Nerfies, D-NeRF, NeRF.github.io/projects/CAPEAM">
+            CAPEAM
+          </a>
+          <a class="navbar-item" href="https://bhkim94.github.io/projects/MCR-Agent">
+            MCR-Agent
+          </a>
+          <a class="navbar-item" href="https://bhkim94.github.io/projects/ABP">
+            ABP
+          </a>
+          <a class="navbar-item" href="https://bhkim94.github.io/projects/MOCA">
+            MOCA
+          </a>
         </div>
       </div>
     </div>
