--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -75,7 +75,7 @@
           <a class="navbar-item" href="https://bhkim94.github.io/projects/CL-ALFRED">
             CL-ALFRED
           </a>
-          <a class="navbar-item" href="https://bhkim94Nerfies, D-NeRF, NeRF.github.io/projects/CAPEAM">
+          <a class="navbar-item" href="https://bhkim94.github.io/projects/CAPEAM">
             CAPEAM
           </a>
           <a class="navbar-item" href="https://bhkim94.github.io/projects/MCR-Agent">
