--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -218,6 +218,22 @@
   </div>
 </footer>
 
-  
+<!-- Default Statcounter code for flare
+https://twoongg.github.io/projects/flare/ -->
+<script type="text/javascript">
+  var sc_project=13068319; 
+  var sc_invisible=1; 
+  var sc_security="3390d8c2"; 
+  </script>
+  <script type="text/javascript"
+  src="https://www.statcounter.com/counter/counter.js"
+  async></script>
+  <noscript><div class="statcounter"><a title="Web Analytics
+  Made Easy - Statcounter" href="https://statcounter.com/"
+  target="_blank"><img class="statcounter"
+  src="https://c.statcounter.com/13068319/0/3390d8c2/1/"
+  alt="Web Analytics Made Easy - Statcounter"
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+  <!-- End of Statcounter Code -->  
 </body>
 </html>
