--- a/projects/realfred/index.html
+++ b/projects/realfred/index.html
@@ -69,6 +69,9 @@
           More Research
         </a>
         <div class="navbar-dropdown">
+          <a class="navbar-item" href="https://twoongg.github.io/projects/flare/">
+            FLARE
+          </a>
           <a class="navbar-item" href="https://twoongg.github.io/projects/realfred/">
             ReALFRED
           </a>
