--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -135,12 +135,12 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://to appear"
+                <a href="https://arxiv.org/abs/2412.17288"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (to appear)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <span class="link-block">
