--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -293,12 +293,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{kim2024flare,
-  author    = {Kim, Taewoong and Kim, Byeonghwi and Choi, Jonghyun},
-  title     = {Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples},
-  booktitle = {AAAI},
-  year      = {2025},
-}</code></pre>
+    <pre><code>@inproceedings{kim2025multimodal,
+      author    = {Kim, Taewoong and Kim, Byeonghwi and Choi, Jonghyun},
+      title     = {Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples},
+      booktitle = {AAAI},
+      year      = {2025}
+    }</code></pre>
   </div>
 </section>
 
