update flare project page

--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -7,10 +7,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples">
+        content="Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with a Few Examples">
   <meta name="keywords" content="Embodied AI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples</title>
+  <title>Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with a Few Examples</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BWYESK2L9"></script>
@@ -104,7 +104,7 @@
             Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples
           </h1>
           <h1 class="title is-4 publication-title">
-            AAAI 2025 (to appear)
+            AAAI 2025 (Oral)
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -186,13 +186,6 @@
           </div>
         </div>
       </div>
-      
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-full-width">
-          <h2 class="title is-3">Under construction</h2>
-
-    </div>
-  </div>
 </section>
 
 
@@ -287,6 +280,54 @@
     </div>
   </div>
 </section>
+
+<section class="hero is-light">
+  <div class="container is-max-widescreen">
+    <div class="hero-body">
+      <video id="teaser" autoplay controls muted loop playsinline height="100%">
+        <source src="static/video/flare-alfred-quali-NoVoice-compressed.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+  
+  <div class="container is-max-widescreen">
+  </div>
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-steve">
+          <figure>  
+          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+            <source src="static/video/1_block_good.mp4"
+            type="video/mp4">
+          </video>
+        </figure>
+        </div>
+        <div class="item item-chair-tp">
+          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+            <source src="static/video/3_block.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-shiba">
+          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
+            <source src="static/video/8.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-blueshirt">
+          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
+            <source src="static/video/2.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
 
 
