--- a/projects/flare/index.html
+++ b/projects/flare/index.html
@@ -101,7 +101,7 @@
       <div class="columns is-centered is-full-width">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title" style="font-size:45px">
-            Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with A Few Examples
+            Multi-Modal Grounded Planning and Efficient Replanning For Learning Embodied Agents with a Few Examples
           </h1>
           <h1 class="title is-4 publication-title">
             AAAI 2025 (Oral)
@@ -184,6 +184,13 @@
               Learning a perception and reasoning module for robotic assistants to plan steps to perform complex tasks based on natural language instructions often requires large free-form language annotations, especially for short high-level instructions. To reduce the cost of annotation, large language models (LLMs) are used as a planner with few data. However, when elaborating the steps, even the state-of-the-art planner that uses LLMs mostly relies on linguistic common sense, often neglecting the status of the environment at command reception, resulting in inappropriate plans. To generate plans grounded in the environment, we propose FLARE (Few-shot Language with environmental Adaptive Replanning Embodied agent), which improves task planning using both language command and environmental perception. As language instructions often contain ambiguities or incorrect expressions, we additionally propose to correct the mistakes using visual cues from the agent. The proposed scheme allows us to use a few language pairs thanks to the visual cues and outperforms state-of-the-art approaches. Our code is available at https://github.com/snumprlab/flare.
             </p>
           </div>
+          <div class="columns is-centered has-text-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/HPg6dNcnDJU?si=vuzED2rwJbrhwooU"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
         </div>
       </div>
 </section>
